Add scanner logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_summarized_text">Summarized text</string>
     <string name="desc_compression_rate">Compressed by </string>
     <string name="permission_camera_denial_warning">This feature is unavailable without camera permission</string>
+    <string name="desc_error_scan">An error occurred while scanning the image.\nAre you sure you captured the text correctly?</string>
 </resources>
