--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="desc_compression_rate">Compressed by </string>
     <string name="permission_camera_denial_warning">This feature is unavailable without camera permission</string>
     <string name="desc_error_scan">An error occurred while scanning the image.\nAre you sure you captured the text correctly?</string>
+    <string name="title_details">Details</string>
 </resources>
