--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="permission_camera_denial_warning">This feature is unavailable without camera permission</string>
     <string name="desc_error_scan">An error occurred while scanning the image.\nAre you sure you captured the text correctly?</string>
     <string name="title_details">Details</string>
+    <string name="summarization_desc_extractive">Extractive</string>
+    <string name="summarization_desc_abstractive">Abstractive</string>
 </resources>
